Initial commit with HTML file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="profile">
             <div class="myicon">
                 <!-- put image icon -->
-                <img src="C:\Users\hp\Downloads\javascript\frontendmentor02\image-avatar.webp" alt="">
+                <img src="image-avatar.webp" alt="">
             </div>
             <div class="nameinfo">
                 <!-- put name information -->
