--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Preveiew Card</title>
+    <title>Blog Preview Card</title>
     <link rel="shortcut icon" type="favicon.ico" href="favicon-32x32.png">
     <link rel="stylesheet" href="blog.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
